<resources>
    <string name="app_name">Colectie de monede</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lv_row_default">-</string>
    <string name="coin_image">Coin Image</string>
    <string name="tv_row_continent">Continent</string>
    <string name="tv_row_tara">Tara</string>
    <string name="tv_row_denumire">Denumire</string>
    <string name="tv_row_valoare">Valoare</string>
    <string name="tv_row_an">An</string>
    <string name="tv_row_grosime">Grosime</string>
    <string name="tv_row_diametru">Diametru</string>
    <string name="tv_row_culoare">Culoare</string>
    <string name="tv_row_material">Material</string>
    <string name="tv2_acasa">Ne bucurăm să te revedem!</string>
    <string name="tv3_acasa">Aceasta este ultima ta recenzie:</string>
    <string name="fab_icon_content_description">review</string>

    <string name="acasa_mesaj_intampinare">Buna, %1$s!</string>
    <string name="adaug_prieteni_colectionari">Adaug prieteni colectionari !</string>
    <string name="hint_nume">Nume</string>
    <string name="hint_prenume">Prenume</string>
    <string name="tv_numarMonede">Numar de monede</string>
    <string name="tv_prieten">Prieten :</string>
    <string name="btn_peste_anii_2000">Peste anii 2000</string>
    <string name="btn_monede_din_romania">Monede din Romania</string>
    <string name="btn_Adauga">Adauga</string>
    <string name="acasa">Acasa</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="colectia_mea">Colectia mea</string>
    <string name="prieteni">Prieteni</string>
    <string name="imageview_prieteni">ImageView_prieteni</string>
    <string name="descriere_info">Acestea suntem noi, încercând să rezolvăm bug-urile apărute în producție!</string>
    <string name="moneda_noua">MONEDA NOUA</string>
    <string name="tara">Tara</string>
    <string name="denumire_moneda">Denumire moneda</string>
    <string name="valoare_moneda">Valoare moneda</string>
    <string name="an_yyyy">An YYYY</string>
    <string name="diametru_cm">Diametru (cm)</string>
    <string name="grosime_mm">Grosime (mm)</string>
    <string name="culoare_moneda">Culoare moneda</string>
    <string name="auriu">Auriu</string>
    <string name="argintiu">Argintiu</string>
    <string name="material">Material</string>
    <string name="nume">Nume</string>
    <string name="adaugare">Adaugare</string>

    <string-array name="continente">
        <item>Asia</item>
        <item>America de Nord</item>
        <item>America de Sud</item>
        <item>Europa</item>
        <item>Africa</item>
        <item>Australia</item>
        <item>Antarctida</item>
    </string-array>
</resources>